// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders correctly with className 1`] = `
<div
  className="h-1 button-gradient w-1/2"
/>
`;

exports[`Separator renders correctly without className 1`] = `
<div
  className="h-1 button-gradient"
/>
`;
